--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,21 @@ MarkupSafe==2.1.3
 Pygments==2.16.1
 Sphinx==7.2.5
 alabaster==0.7.13
+appdirs==1.4.4
 certifi==2023.7.22
 charset-normalizer==3.2.0
+commonmark==0.9.1
 docutils==0.20.1
 idna==3.4
 imagesize==1.4.1
 packaging==23.1
+recommonmark==0.7.1
 requests==2.31.0
+rinoh-typeface-dejavuserif==0.1.3
+rinoh-typeface-texgyrecursor==0.1.1
+rinoh-typeface-texgyreheros==0.1.1
+rinoh-typeface-texgyrepagella==0.1.1
+rinohtype==0.5.4
 snowballstemmer==2.2.0
 sphinxcontrib-applehelp==1.0.7
 sphinxcontrib-devhelp==1.0.5
